# hydrochain-contracts

./: DESIGN.md
contracts/buyer/: Cargo.toml
contracts/buyer/schema/: bloxigen.json  buyer.json
contracts/buyer/src/: contract.rs  msg.rs
contracts/hydrogen/: Cargo.toml
contracts/hydrogen/schema/: hydrogen.json
contracts/hydrogen/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/hydrogen/ts/: Hydrogen.client.ts  Hydrogen.types.ts
contracts/producer/: Cargo.toml  NOTICE
contracts/producer/schema/: producer.json
contracts/producer/src/: contract.rs  msg.rs  state.rs
src/: contract.rs
