[package]
name = "producer"
version = "0.1.0"
authors = ["Jakub Bogucki <jakub@confio.gmbh>"]
description = "Producer contract of Hydrochain application"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw-storage-plus = { version = "0.15", features = ['iterator'] }
cw-utils = "0.15"
cw2 = "0.15"
hydrogen = { version = "0.1", path = "../hydrogen", features = ['library'] }
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1" }

[dev-dependencies]
cw-multi-test = "0.15"
